css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
  margin: 0;
  padding: 0;
  box-sizing: border-box;

  font: normal 100%/1.5 sans-serif;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
}
@media only screen and (min-width: 60em) {
    
    html {
        font-size: 110%;
    }
}

@media only screen and (min-width: 90em) {
    
    html {
        font-size: 120%;
    }
}

@media only screen and (min-width: 120em) {
    
    html {
        font-size: 130%;
    }
}

*, *:before, *:after {
  box-sizing: inherit;
}


body {
  margin: 0;
  padding: 0;
}

.img-flex {
  display: block;
  width: 100%;
}

.masthead {
  background-color: #ccc;
  overflow: hidden;
}

.title {
    text-align: center;
    margin: 0;
}

.nav {
    margin: 0;
    padding: 1em 0;
    list-style-type: none;
    background-color: #ccc;
}

.nav li {
    border-top: 0;
}

.nav a,
.nav a:link,
.nav a:visited {
  display: block;

  color: #0074D9;
  text-decoration: none;
}

.nav a:hover,
.nav a:focus,
.nav a:active {
  background-color: #0074D9;

  color: #fff;
}

.intro {
    background-color: #e2e2e2;
    text-align: center;
    font-weight: normal;
}

.index-image-background {
  background-color: #efefef;
  overflow: hidden;
}

.table-colour {
  background-color: #e2e2e2;
  overflow: hidden;
}

@media only screen and (min-width: 25em) {
    
    .nav {
        text-align: center;
    }

    .nav li {
        display: inline-block;
    }
}

@media only screen and (min-width: 38em) {
    
   .title {
       text-align: left;
       float: left;
   }
    
   .nav {
       float: left;
       padding: 1em 0;
   }
}

